infra/ray/manifests/dashboard.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: ray-dashboard-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8265
      targetPort: dashboard
      protocol: TCP
      name: dashboard
    - port: 10001
      targetPort: client
      protocol: TCP
      name: client
  selector:
    ray.io/cluster: ray-cluster-ccc
    ray.io/node-type: head
